# kubeflow-from-pipeline

./: LICENSE  README.md  generated_functions.py  hello.py  main.py  main_legacy.py  pyproject.toml  requirements.txt
kubeflow_from_pipeline/: databases.py  kfp_generator_declarative.py  kfp_generator_namedtuple.py
src/kubeflow_from_pipeline/: __init__.py  databases.py
